docs/envoy/v1.7.0/_sources/api-v2/api/v2/core/base.proto.rst.txt
.. _envoy_api_file_envoy/api/v2/core/base.proto:

Common types
============


.. _envoy_api_msg_core.Locality:

core.Locality
-------------

`[core.Locality proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/api/v2/core/base.proto#L16>`_

Identifies location of where either Envoy runs or where upstream hosts run.

.. code-block:: json

  {
    "region": "...",
    "zone": "...",
    "sub_zone": "..."
  }

.. _envoy_api_field_core.Locality.region:

region
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Region this :ref:`zone <envoy_api_field_core.Locality.zone>` belongs to.
  
  
.. _envoy_api_field_core.Locality.zone:

zone
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Defines the local service zone where Envoy is running. Though optional, it
  should be set if discovery service routing is used and the discovery
  service exposes :ref:`zone data <config_cluster_manager_sds_api_host_az>`,
  either in this message or via :option:`--service-zone`. The meaning of zone
  is context dependent, e.g. `Availability Zone (AZ)
  <https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/using-regions-availability-zones.html>`_
  on AWS, `Zone <https://cloud.google.com/compute/docs/regions-zones/>`_ on
  GCP, etc.
  
  
.. _envoy_api_field_core.Locality.sub_zone:

sub_zone
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) When used for locality of upstream hosts, this field further splits zone
  into smaller chunks of sub-zones so they can be load balanced
  independently.
  
  


.. _envoy_api_msg_core.Node:

core.Node
---------

`[core.Node proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/api/v2/core/base.proto#L39>`_

Identifies a specific Envoy instance. The node identifier is presented to the
management server, which may use this identifier to distinguish per Envoy
configuration for serving.

.. code-block:: json

  {
    "id": "...",
    "cluster": "...",
    "metadata": "{...}",
    "locality": "{...}",
    "build_version": "..."
  }

.. _envoy_api_field_core.Node.id:

id
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An opaque node identifier for the Envoy node. This also provides the local
  service node name. It should be set if any of the following features are
  used: :ref:`statsd <arch_overview_statistics>`, :ref:`CDS
  <config_cluster_manager_cds>`, and :ref:`HTTP tracing
  <arch_overview_tracing>`, either in this message or via
  :option:`--service-node`.
  
  
.. _envoy_api_field_core.Node.cluster:

cluster
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Defines the local service cluster name where Envoy is running. Though
  optional, it should be set if any of the following features are used:
  :ref:`statsd <arch_overview_statistics>`, :ref:`health check cluster
  verification <config_cluster_manager_cluster_hc_service_name>`,
  :ref:`runtime override directory <config_runtime_override_subdirectory>`,
  :ref:`user agent addition <config_http_conn_man_add_user_agent>`,
  :ref:`HTTP global rate limiting <config_http_filters_rate_limit>`,
  :ref:`CDS <config_cluster_manager_cds>`, and :ref:`HTTP tracing
  <arch_overview_tracing>`, either in this message or via
  :option:`--service-cluster`.
  
  
.. _envoy_api_field_core.Node.metadata:

metadata
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) Opaque metadata extending the node identifier. Envoy will pass this
  directly to the management server.
  
  
.. _envoy_api_field_core.Node.locality:

locality
  (:ref:`core.Locality <envoy_api_msg_core.Locality>`) Locality specifying where the Envoy instance is running.
  
  
.. _envoy_api_field_core.Node.build_version:

build_version
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) This is motivated by informing a management server during canary which
  version of Envoy is being tested in a heterogeneous fleet. This will be set
  by Envoy in management server RPCs.
  
  


.. _envoy_api_msg_core.Metadata:

core.Metadata
-------------

`[core.Metadata proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/api/v2/core/base.proto#L91>`_

Metadata provides additional inputs to filters based on matched listeners,
filter chains, routes and endpoints. It is structured as a map from filter
name (in reverse DNS format) to metadata specific to the filter. Metadata
key-values for a filter are merged as connection and request handling occurs,
with later values for the same key overriding earlier values.

An example use of metadata is providing additional values to
http_connection_manager in the envoy.http_connection_manager.access_log
namespace.

For load balancing, Metadata provides a means to subset cluster endpoints.
Endpoints have a Metadata object associated and routes contain a Metadata
object to match against. There are some well defined metadata used today for
this purpose:

* ``{"envoy.lb": {"canary": <bool> }}`` This indicates the canary status of an
  endpoint and is also used during header processing
  (x-envoy-upstream-canary) and for stats purposes.

.. code-block:: json

  {
    "filter_metadata": "{...}"
  }

.. _envoy_api_field_core.Metadata.filter_metadata:

filter_metadata
  (map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, `Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_>) Key is the reverse DNS filter name, e.g. com.acme.widget. The envoy.*
  namespace is reserved for Envoy's built-in filters.
  
  


.. _envoy_api_msg_core.RuntimeUInt32:

core.RuntimeUInt32
------------------

`[core.RuntimeUInt32 proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/api/v2/core/base.proto#L98>`_

Runtime derived uint32 with a default when not specified.

.. code-block:: json

  {
    "default_value": "...",
    "runtime_key": "..."
  }

.. _envoy_api_field_core.RuntimeUInt32.default_value:

default_value
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Default value if runtime value is not available.
  
  
.. _envoy_api_field_core.RuntimeUInt32.runtime_key:

runtime_key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Runtime key to get value for comparison. This value is used if defined.
  
  


.. _envoy_api_msg_core.HeaderValue:

core.HeaderValue
----------------

`[core.HeaderValue proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/api/v2/core/base.proto#L133>`_

Header name/value pair.

.. code-block:: json

  {
    "key": "...",
    "value": "..."
  }

.. _envoy_api_field_core.HeaderValue.key:

key
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Header name.
  
  
.. _envoy_api_field_core.HeaderValue.value:

value
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Header value.
  
  The same :ref:`format specifier <config_access_log_format>` as used for
  :ref:`HTTP access logging <config_access_log>` applies here, however
  unknown header values are replaced with the empty string instead of `-`.
  
  


.. _envoy_api_msg_core.HeaderValueOption:

core.HeaderValueOption
----------------------

`[core.HeaderValueOption proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/api/v2/core/base.proto#L146>`_

Header name/value pair plus option to control append behavior.

.. code-block:: json

  {
    "header": "{...}",
    "append": "{...}"
  }

.. _envoy_api_field_core.HeaderValueOption.header:

header
  (:ref:`core.HeaderValue <envoy_api_msg_core.HeaderValue>`) Header name/value pair that this option applies to.
  
  
.. _envoy_api_field_core.HeaderValueOption.append:

append
  (`BoolValue <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#boolvalue>`_) Should the value be appended? If true (default), the value is appended to
  existing values.
  
  


.. _envoy_api_msg_core.DataSource:

core.DataSource
---------------

`[core.DataSource proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/api/v2/core/base.proto#L156>`_

Data source consisting of either a file or an inline value.

.. code-block:: json

  {
    "filename": "...",
    "inline_bytes": "...",
    "inline_string": "..."
  }

.. _envoy_api_field_core.DataSource.filename:

filename
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Local filesystem data source.
  
  
  Precisely one of :ref:`filename <envoy_api_field_core.DataSource.filename>`, :ref:`inline_bytes <envoy_api_field_core.DataSource.inline_bytes>`, :ref:`inline_string <envoy_api_field_core.DataSource.inline_string>` must be set.
  
.. _envoy_api_field_core.DataSource.inline_bytes:

inline_bytes
  (`bytes <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Bytes inlined in the configuration.
  
  
  Precisely one of :ref:`filename <envoy_api_field_core.DataSource.filename>`, :ref:`inline_bytes <envoy_api_field_core.DataSource.inline_bytes>`, :ref:`inline_string <envoy_api_field_core.DataSource.inline_string>` must be set.
  
.. _envoy_api_field_core.DataSource.inline_string:

inline_string
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) String inlined in the configuration.
  
  
  Precisely one of :ref:`filename <envoy_api_field_core.DataSource.filename>`, :ref:`inline_bytes <envoy_api_field_core.DataSource.inline_bytes>`, :ref:`inline_string <envoy_api_field_core.DataSource.inline_string>` must be set.
  


.. _envoy_api_msg_core.TransportSocket:

core.TransportSocket
--------------------

`[core.TransportSocket proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/api/v2/core/base.proto#L175>`_

Configuration for transport socket in :ref:`listeners <config_listeners>` and
:ref:`clusters <config_cluster_manager_cluster>`. If the configuration is
empty, a default transport socket implementation and configuration will be
chosen based on the platform and existence of tls_context.

.. code-block:: json

  {
    "name": "...",
    "config": "{...}"
  }

.. _envoy_api_field_core.TransportSocket.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The name of the transport socket to instantiate. The name must match a supported transport
  socket implementation.
  
  
.. _envoy_api_field_core.TransportSocket.config:

config
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) Implementation specific configuration which depends on the implementation being instantiated.
  See the supported transport socket implementations for further documentation.
  
  

.. _envoy_api_enum_core.RoutingPriority:

Enum core.RoutingPriority
-------------------------

`[core.RoutingPriority proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/api/v2/core/base.proto#L113>`_

Envoy supports :ref:`upstream priority routing
<arch_overview_http_routing_priority>` both at the route and the virtual
cluster level. The current priority implementation uses different connection
pool and circuit breaking settings for each priority level. This means that
even for HTTP/2 requests, two physical connections will be used to an
upstream host. In the future Envoy will likely support true HTTP/2 priority
over a single upstream connection.

.. _envoy_api_enum_value_core.RoutingPriority.DEFAULT:

DEFAULT
  *(DEFAULT)* ⁣
  
.. _envoy_api_enum_value_core.RoutingPriority.HIGH:

HIGH
  ⁣
  

.. _envoy_api_enum_core.RequestMethod:

Enum core.RequestMethod
-----------------------

`[core.RequestMethod proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/api/v2/core/base.proto#L119>`_

HTTP request method.

.. _envoy_api_enum_value_core.RequestMethod.METHOD_UNSPECIFIED:

METHOD_UNSPECIFIED
  *(DEFAULT)* ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.GET:

GET
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.HEAD:

HEAD
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.POST:

POST
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.PUT:

PUT
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.DELETE:

DELETE
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.CONNECT:

CONNECT
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.OPTIONS:

OPTIONS
  ⁣
  
.. _envoy_api_enum_value_core.RequestMethod.TRACE:

TRACE
  ⁣
  
